# trucker-game

./: .gitignore  CMakeLists.txt  cmake_install.cmake  compile_commands.json  main.cpp
assets/materials/: bp-green.mat  bp-red.mat  bp-rock.mat
assets/meshes/: cube.mesh  pedestal.mesh  test.mesh
assets/shaders/geometry/monochromatic/: fragment.glsl  vertex.glsl
assets/shaders/geometry/textured/: vertex.glsl
assets/shaders/lighting/monochromatic/: fragment.glsl  vertex.glsl
assets/textures/: rock.tex
engine/: ComponentArray.cpp  ComponentArray.h  ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  EntityManager.h  Types.h
include/common/math/: Matrix4f.h  Quarternion.h  Quaternion.h  Transform.h  Vector2f.h  Vector3f.h  Vector4f.h
include/common/render/: Light.h  Material.h  Mesh.h
include/common/util/: HashableArray.h  Triple.h
include/engine/: Archetype.h  Component.h  Component.tpp  ECS.h  ECS.tpp  Globals.h  System.h  Types.h
include/engine/ecs/: Archetype.h  Component.h  ECS.h  ECS.tpp  System.h
include/engine/graphics/opengl/: BPMonochromaticMaterialBatch.h  Batch.h  Camera.h  Definitions.h  MaterialBasedBatch.h  ObjectBasedBatch.h  Renderer.h  VertexArrayObject.h
include/engine/graphics/opengl/buffer/: BufferObject.h  FrameBufferObject.h  GBuffer.h  GLBuffer.h  GLBuffer.tpp  RenderBuffer.h  VertexBufferObject.h  VertexBufferObject2f.h  VertexBufferObject3f.h  std140.h
include/engine/graphics/opengl/material/: BPMonochromaticMaterialHandler.h  MaterialBasedBatch.h  MaterialHandler.h  MaterialHandlerBase.h  MaterialHandlerRegistry.h
include/engine/graphics/opengl/pass/: GeometryPass.h  LightingPass.h  RenderPass.h
include/engine/graphics/opengl/shader/: FragmentShader.h  Shader.h  ShaderProgram.h  VertexShader.h
include/engine/graphics/opengl/texture/: DeferredShadingTextureRegistry.h  Texture.h  Texture2D.h  TextureManager.h
include/engine/graphics/opengl/util/: GLUtils.h  MappedVector.h
include/engine/resource/: MeshResource.h  Resource.h  TextResource.h  Types.h
include/engine/resource/manager/: ResourceManager.h  ResourceManager.tpp
include/engine/resource/resolver/: MeshResourceResolver.h  ResourceResolver.h  TextResourceResolver.h
include/game/: Globals.h
include/game/component/: PositionComponent.h  RenderComponent.h  TransformComponent.h
include/game/system/: OpenGLRenderingSystem.h  RotationSystem.h
scripts/: convert_wavefront.py  test.mesh  untitled.mesh  untitled.mtl
src/common/math/: Matrix4f.cpp  Quaternion.cpp  Vector2f.cpp  Vector3f.cpp  Vector4f.cpp
src/engine/: Component.cpp  ECS.cpp
src/engine/ecs/: Component.cpp  ECS.cpp
src/engine/graphics/opengl/: BPMonochromaticMaterialBatch.cpp  Camera.cpp  ObjectBasedBatch.cpp  Renderer.cpp  VertexArrayObject.cpp
src/engine/graphics/opengl/buffer/: BufferObject.cpp  FrameBufferObject.cpp  GBuffer.cpp  RenderBuffer.cpp  VertexBufferObject.cpp  VertexBufferObject2f.cpp  VertexBufferObject3f.cpp
src/engine/graphics/opengl/material/: BPMonochromaticMaterialHandler.cpp  MaterialBasedBatch.cpp  MaterialHandlerRegistry.cpp
src/engine/graphics/opengl/pass/: GeometryPass.cpp  LightingPass.cpp
src/engine/graphics/opengl/shader/: FragmentShader.cpp  Shader.cpp  ShaderProgram.cpp  VertexShader.cpp
src/engine/graphics/opengl/texture/: DeferredShadingTextureRegistry.cpp  Texture.cpp  Texture2D.cpp  (+1 more)
src/engine/resource/: Resource.cpp
src/engine/resource/manager/: ResourceManager.cpp
src/engine/resource/resolver/: MeshResourceResolver.cpp  TextResourceResolver.cpp
src/game/system/: OpenGLRenderingSystem.cpp  RotationSystem.cpp
(+2 files in other folders)
